12-kuber/2.3/files/deploy-netology-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-multitool-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-multitool
  template:
    metadata:
      labels:
        app: nginx-multitool
    spec:
      containers:
        - name: nginx 
          image: nginx 
          volumeMounts:
            - mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
              name: nginx-conf
          ports:
          - containerPort: 9090
            protocol: TCP
        - name: multitool
          image: wbitt/network-multitool
          ports:
          - containerPort: 80
            protocol: TCP
      volumes:
        - name: nginx-conf
          configMap:
            name: nginx
