12-kuber/2.3/files/service-netology-1.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-multitool-svc
spec:
  selector:
    app: nginx-multitool
  ports:
    - name: nginx
      protocol: TCP
      port: 9090
      targetPort: 9090
    - name: multitool
      protocol: TCP
      port: 80
      targetPort: 80
